feat: add prompt api (#29)
